[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://script/main_menu.gd" type="Script" id=2]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="PanelHost" type="Panel" parent="."]
margin_left = 351.0
margin_top = 194.0
margin_right = 611.0
margin_bottom = 391.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelHost"]
margin_left = 87.8132
margin_top = 14.5754
margin_right = 172.813
margin_bottom = 28.5754
text = "Create Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="PanelHost"]
margin_left = 12.0033
margin_top = 42.8688
margin_right = 94.0033
margin_bottom = 56.8688
text = "Server name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtServerName" type="LineEdit" parent="PanelHost"]
margin_left = 12.0
margin_top = 62.0
margin_right = 244.0
margin_bottom = 86.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="PanelHost"]
margin_left = 14.5753
margin_top = 95.1686
margin_right = 54.5753
margin_bottom = 109.169
text = "Port"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtServerPort" type="LineEdit" parent="PanelHost"]
margin_left = 15.4327
margin_top = 113.174
margin_right = 73.4327
margin_bottom = 137.174
text = "4546"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="PanelHost"]
margin_left = 88.3096
margin_top = 94.3112
margin_right = 197.31
margin_bottom = 108.311
text = "Max connections"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtMaxPlayers" type="SpinBox" parent="PanelHost"]
margin_left = 89.167
margin_top = 114.031
margin_right = 163.167
margin_bottom = 138.031
min_value = 2.0
max_value = 16.0
value = 6.0

[node name="btCreate" type="Button" parent="PanelHost"]
margin_left = 189.48
margin_top = 156.042
margin_right = 242.48
margin_bottom = 176.042
text = "Create"

[node name="PanelJoin" type="Panel" parent="."]
margin_left = 350.0
margin_top = 399.0
margin_right = 610.0
margin_bottom = 536.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelJoin"]
margin_left = 96.5675
margin_top = 10.83
margin_right = 163.568
margin_bottom = 24.83
text = "Join Server"

[node name="Label2" type="Label" parent="PanelJoin"]
margin_left = 11.7325
margin_top = 37.905
margin_right = 51.7325
margin_bottom = 51.905
text = "IP"

[node name="txtJoinIP" type="LineEdit" parent="PanelJoin"]
margin_left = 12.0
margin_top = 60.0
margin_right = 118.0
margin_bottom = 84.0
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="PanelJoin"]
margin_left = 131.178
margin_top = 39.4392
margin_right = 171.178
margin_bottom = 53.4392
text = "Port"

[node name="txtJoinPort" type="LineEdit" parent="PanelJoin"]
margin_left = 132.036
margin_top = 59.1589
margin_right = 190.036
margin_bottom = 83.1589
text = "4546"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btJoin" type="Button" parent="PanelJoin"]
margin_left = 199.768
margin_top = 96.8834
margin_right = 234.768
margin_bottom = 116.883
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelPlayer" type="Panel" parent="."]
margin_left = 348.752
margin_top = 45.0499
margin_right = 610.752
margin_bottom = 186.05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelPlayer"]
margin_left = 6.98337
margin_top = 9.07838
margin_right = 91.9834
margin_bottom = 23.0784
text = "Player Name:"

[node name="txtPlayerName" type="LineEdit" parent="PanelPlayer"]
margin_left = 6.0
margin_top = 27.0
margin_right = 250.0
margin_bottom = 51.0

[node name="Label2" type="Label" parent="PanelPlayer"]
margin_left = 86.5938
margin_top = 60.7553
margin_right = 126.594
margin_bottom = 74.7553
text = "Color"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerIcon" type="Sprite" parent="PanelPlayer"]
position = Vector2( 41.9002, 92.1805 )
texture = ExtResource( 1 )

[node name="btColor" type="ColorPickerButton" parent="PanelPlayer"]
margin_left = 86.0
margin_top = 81.2066
margin_right = 145.0
margin_bottom = 101.207
color = Color( 1, 1, 1, 1 )

[node name="btRandomColor" type="Button" parent="PanelPlayer"]
margin_left = 85.8955
margin_top = 104.751
margin_right = 143.895
margin_bottom = 124.751
text = "Random"
[connection signal="pressed" from="PanelHost/btCreate" to="." method="_on_btCreate_pressed"]
[connection signal="pressed" from="PanelJoin/btJoin" to="." method="_on_btJoin_pressed"]
[connection signal="color_changed" from="PanelPlayer/btColor" to="." method="_on_btColor_color_changed"]
[connection signal="pressed" from="PanelPlayer/btRandomColor" to="." method="_on_btDefaultColor_pressed"]
